--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Peter Miyalu - Artiste Visuel</title>
+  <title>Peter Miyalu - Artiste Visuel, Cinéaste et Producteur</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -44,14 +44,14 @@
       <h1><a href="index.html">Peter Miyalu</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>visual artist</span> from Kinshasa(DRC)</h2>
+      <h2><span>Artiste Visuel, Cinéaste et Producteur</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link active" href="#header">Home</a></li>
-          <li><a class="nav-link" href="#about">About</a></li>
-          <li><a class="nav-link" href="#resume">Resume</a></li>
-          <li><a class="nav-link" href="#services">Services</a></li>
+          <li><a class="nav-link active" href="#header">Accueil</a></li>
+          <li><a class="nav-link" href="#about">Apropos</a></li>
+          <li><a class="nav-link" href="#resume">Resumé</a></li>
+          <li><a class="nav-link" href="#services">Projets</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
@@ -84,25 +84,26 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Visual artist &amp; Graphist</h3>
+          <h3>Biographie</h3>
           <p class="fst-italic">
             Born in Kinshasa, Peter Miyalu lives and works between Kinshasa and the city of Trois-Rivières in Canada.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>11 Aout 2000</span></li>
+                <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>11 Aout 2000</span></li> -->
                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 (873) 993-1612</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Trois-Rivières, Quebec.</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>petermiyalu22@gmail.com</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master(During)</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>petermiyalu22@gmail.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 (873) 993-1612</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Trois-Rivières, Quebec.</span></li>
+                <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master(During)</span></li> -->
+                
+                <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
               </ul>
             </div>
           </div>
@@ -348,7 +349,7 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Resume</h2>
+        <h2>Carrière</h2>
         <p>Check My Resume</p>
       </div>
 
@@ -467,7 +468,7 @@ SADI, Monts des Arts Cultural Center
     <div class="container">
 
       <div class="section-title">
-        <h2>Services</h2>
+        <h2>Projets</h2>
         <p>My Services</p>
       </div>
 
